--- a/views/admin/userDetail.ejs
+++ b/views/admin/userDetail.ejs
@@ -32,7 +32,7 @@
                                 <input
                                 type="file"
                                 id="upload"
-                                name="image"
+                                name="images"
                                 class="account-file-input"
                                 hidden
                                 accept="image/png, image/jpeg"
@@ -63,16 +63,6 @@
                                 <label for="lastName" class="form-label font10px">soyad</label>
                                 <input class="form-control font12px" type="text" name="surname" id="surname" value="<%=user.surname%>" />
                               </div>
-                              <% if(authenticateUser.role === 'admin') { %>
-                              <div class="mb-3 col-md-6">
-                                <label for="role" class="form-label font10px">yetki</label>
-                                <select class="form-select role-select font12px" aria-label="Default select example">
-                                  <option value="demo">demo</option>
-                                  <option value="user">user</option>
-                                  <option value="admin">admin</option>
-                                </select>
-                              </div>
-                              <% } %>
                             </div>
                             <div class="mt-2">
                               <button type="submit" class="btn btn-primary me-2 font12px">Güncelle</button>
@@ -83,35 +73,6 @@
                           </form>
                         </div>
                         <!-- /Account -->
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-xxl flex-grow-1 container-p-y">
-              <div class="row">
-                <div class="col-lg-12 mb-4 order-0">
-                  <div class="card mb-4">
-                    <h5 class="card-header font12px">Şifre Değiştir</h5>
-                      <hr class="my-0" />
-                      <div class="card-body">
-                        <form id="passwordChange" method="PATCH" onsubmit="return false">
-                          <input class="form-control" type="hidden" name="updateUserId" id="updateUserId" value="<%=user._id%>" />
-                          <div class="row">
-                            <div class="mb-3 col-6">
-                              <label for="old-password" class="form-label font10px">Eski şifre</label>
-                              <input class="form-control font12px" type="password" id="old-password" name="oldPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" />
-                            </div>
-                            <div class="mb-3 col-6">
-                              <label for="new-password" class="form-label font10px">Yeni şifre</label>
-                              <input class="form-control font12px" type="password" id="new-password" name="newPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"/>
-                            </div>
-                          </div>
-                          <div class="mt-2">
-                            <button type="submit" class="btn btn-primary me-2 font12px">Güncelle</button>
-                          </div>
-                        </form>
-                      </div>
                   </div>
                 </div>
               </div>
@@ -165,30 +126,5 @@
             };
             reader.readAsDataURL(file);
         }
-    });
-
-    $("#passwordChange").on("submit",function(e) {
-        e.preventDefault();
-        var formData = new FormData(this);
-        $.ajax({
-            url : "http://localhost:3000/api/kurumsal/users/updateUserPassword",
-            type : "PATCH",
-            data : formData,
-            success : (response) => {
-                Swal.fire({
-                    icon: "success",
-                    text: response.msg
-                });
-            },
-            error : (xhr, status, error) => {
-                Swal.fire({
-                    icon: "error",
-                    text: xhr.responseJSON.msg
-                });
-            },
-            cache: false,
-            contentType: false,
-            processData: false
-        });
     });
 </script>
