--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -127,14 +127,11 @@
 
                                         <td style="font-size: 12px;">
                                             <% if(user.role === 'admin') { %> 
-                                                <span class="badge bg-label-danger me-1">Admin</span>
-                                            <% } else if(user.role === 'user') { %>
-                                                <span class="badge bg-label-info me-1">Kullanıcı</span>
-                                            <% } else if(user.role === 'demo') { %>
-                                                <span class="badge bg-label-warning me-1">Demo</span>
+                                                <span class="badge bg-label-danger me-1">sistem yoneticisi</span>
+                                            <% } else if(user.role === 'companyOfficial') { %>
+                                                <span class="badge bg-label-primary me-1">sirket yetkilisi</span>
                                             <% } %>
                                         </td>
-
                                         <td>
                                             <div style="font-size: 12px;" class="dropdown">
                                                 <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
